python/testData/inspections/PyUnresolvedReferencesInspection/noProtectedBuiltinNames.py
print(<error descr="Unresolved reference '_T'">_T</error>, <error descr="Unresolved reference '_KT'">_KT</error>)
print(__import__)
print(len)
